Text Cleaning and Stemming

--- a/main.ipynb
+++ b/main.ipynb
@@ -38,7 +38,64 @@
     "\n",
     "# Initialize Sastrawi Stemmer\n",
     "factory = StemmerFactory()\n",
-    "stemmer = factory.create_stemmer()\n"
+    "stemmer = factory.create_stemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Text Cleaning and Stemming\n",
+    "\n",
+    "# Select the 'full_text' column for sentiment analysis\n",
+    "text = data[\"full_text\"]\n",
+    "\n",
+    "# Display a message indicating the selected text column\n",
+    "print(\"Selected text column:\")\n",
+    "\n",
+    "# Set pandas display options to show all rows\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "pd.set_option(\"display.max_rows\", None)\n",
+    "\n",
+    "# Convert the series to a DataFrame with the column named \"full_text\"\n",
+    "text_df = pd.DataFrame(text, columns=[\"full_text\"])\n",
+    "\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "display(text_df.head(10))\n",
+    "\n",
+    "# Function to clean and stem the text data\n",
+    "def clean_and_stem_text(text):\n",
+    "text = text.lower() # Lowercase the text\n",
+    "text = re.sub(r\"[^a-zA-Z0-9\\s]\", \" \", text) # Remove special characters\n",
+    "text = re.sub(r'https?://\\S+', '', text)\n",
+    "text = re.sub(r'\\b\\d+\\b', '', text)\n",
+    "text = re.sub(r'[^a-zA-Z\\s]', ' ', text)\n",
+    "text = text.replace('\\t', ' ').replace('\\n', ' ').replace('\\\\u', '\n",
+    "').replace('\\\\', '') # Replace escape characters\n",
+    "text = text.encode('ascii', 'replace').decode('ascii') # Encode to ASCII\n",
+    "tokens = word_tokenize(text) # Tokenize the text\n",
+    "filtered_tokens = [word for word in tokens if word not in stop_words_id] #\n",
+    "Remove stopwords\n",
+    "stemmed_tokens = [stemmer.stem(word) for word in filtered_tokens] # Stem the tokens\n",
+    "return \" \".join(stemmed_tokens) # Join the cleaned and stemmed tokens\n",
+    "                                                          \n",
+    "# Clean and stem the text data\n",
+    "text = text.apply(clean_and_stem_text)\n",
+    "\n",
+    "# Set pandas display options to show all rows and full width of columns\n",
+    "pd.set_option(\"display.max_rows\", None)\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "# Save the cleaned and stemmed text to a new DataFrame\n",
+    "cleaned_data = pd.DataFrame({'cleaned_text': text})\n",
+    "\n",
+    "print(\"Cleaned and stemmed text data:\")\n",
+    "display(cleaned_data.head(20))\n",
+    "\n",
+    "# Save the cleaned and stemmed text data to a CSV file\n",
+    "cleaned_data.to_csv(\"cleaned_data.csv\", index=False)"
    ]
   }
  ],
