--- a/main.ipynb
+++ b/main.ipynb
@@ -97,6 +97,62 @@
     "# Save the cleaned and stemmed text data to a CSV file\n",
     "cleaned_data.to_csv(\"cleaned_data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Translation\n",
+    "\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from transformers import MarianMTModel, MarianTokenizer\n",
+    "\n",
+    "# Load the cleaned data\n",
+    "cleaned_data = pd.read_csv(\"cleaned_data.csv\")\n",
+    "\n",
+    "# Load the MarianMT model and tokenizer\n",
+    "model_name = 'Helsinki-NLP/opus-mt-id-en'\n",
+    "tokenizer = MarianTokenizer.from_pretrained(model_name)\n",
+    "model = MarianMTModel.from_pretrained(model_name)\n",
+    "\n",
+    "# Move model to the appropriate device\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "\n",
+    "# Function to translate text\n",
+    "def translate_text(text):\n",
+    "    try:\n",
+    "        # Tokenize the text\n",
+    "        inputs = tokenizer(text, return_tensors=\"pt\", padding=True)\n",
+    "        input_ids = inputs[\"input_ids\"].to(device)\n",
+    "        attention_mask = inputs[\"attention_mask\"].to(device)\n",
+    "        # Generate translation\n",
+    "        translated = model.generate(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        # Decode the generated tokens\n",
+    "        translated_text = tokenizer.decode(translated[0], skip_special_tokens=True)\n",
+    "        return translated_text\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error translating text: {e}\")\n",
+    "        return text\n",
+    "\n",
+    "# Translate the cleaned and stemmed text data\n",
+    "cleaned_data['translated_text'] =\n",
+    "cleaned_data['cleaned_text'].apply(translate_text)\n",
+    "\n",
+    "# Set pandas display options to show all rows and full width of columns\n",
+    "pd.set_option(\"display.max_rows\", None)\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "print(\"Translated text data:\")\n",
+    "display(cleaned_data['translated_text'].head(20))\n",
+    "\n",
+    "# Save the translated text to a new CSV file\n",
+    "cleaned_data.to_csv(\"translated_data.csv\", index=False)\n",
+    "print(\"Translated data saved to translated_data.csv\")"
+   ]
   }
  ],
  "metadata": {
