--- a/main.ipynb
+++ b/main.ipynb
@@ -153,6 +153,79 @@
     "cleaned_data.to_csv(\"translated_data.csv\", index=False)\n",
     "print(\"Translated data saved to translated_data.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Sentiment Analysis \n",
+    " \n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer \n",
+    "import pandas as pd \n",
+    " \n",
+    "# Create an instance of Vader SentimentIntensityAnalyzer \n",
+    "analyzer = SentimentIntensityAnalyzer() \n",
+    " \n",
+    "# Load the translated data \n",
+    "translated_data = pd.read_csv(\"translated_data.csv\") \n",
+    " \n",
+    "# Extract the translated text column \n",
+    "translated_text = translated_data[\"translated_text\"] \n",
+    " \n",
+    "# Function to add sentiment score to the data \n",
+    "def get_sentiment(translated_text): \n",
+    "    if pd.isna(translated_text): \n",
+    "        return None  # Handle NaN values \n",
+    "    sentiment = analyzer.polarity_scores(translated_text) \n",
+    "    return sentiment[\"compound\"] \n",
+    " \n",
+    "# Add sentiment score to the translated data \n",
+    "translated_data[\"sentiment\"] = \n",
+    "translated_data[\"translated_text\"].apply(get_sentiment) \n",
+    " \n",
+    "print(\"Translated data with sentiment score:\") \n",
+    "display(translated_data[['translated_text', 'sentiment']].head(20)) \n",
+    " \n",
+    "# Save the data with sentiment scores to a new CSV file \n",
+    "translated_data.to_csv(\"translated_data_with_sentiment.csv\", index=False) \n",
+    "print(\"Translated data with sentiment scores saved to \n",
+    "translated_data_with_sentiment.csv\") \n",
+    " \n",
+    "# Function to classify sentiment score into positive, neutral, or negative \n",
+    "def sentiment_label(score): \n",
+    "  if score > 0.05: \n",
+    "    return \"positive\" \n",
+    "  elif score < -0.05: \n",
+    "    return \"negative\" \n",
+    "  else: \n",
+    "    return \"neutral\" \n",
+    " \n",
+    "# Load the translated data with sentiment scores \n",
+    "sentiment_data = pd.read_csv(\"translated_data_with_sentiment.csv\") \n",
+    " \n",
+    "# Add sentiment label to the data \n",
+    "sentiment_data[\"sentiment_label\"] = \n",
+    "sentiment_data[\"sentiment\"].apply(sentiment_label) \n",
+    " \n",
+    "print(\"Data with sentiment label:\") \n",
+    "# Create a DataFrame with 'translated_text', 'sentiment', and 'sentiment_label' \n",
+    "columns \n",
+    "selected_data = sentiment_data[['translated_text', 'sentiment', \n",
+    "'sentiment_label']] \n",
+    " \n",
+    "# Set pandas display options to show the full width of the 'translated_text' \n",
+    "column \n",
+    "pd.set_option('display.max_colwidth', None) \n",
+    " \n",
+    "# Display the DataFrame in table format \n",
+    "display(selected_data.head(20)) \n",
+    " \n",
+    "# Save the DataFrame with sentiment labels to a new CSV file \n",
+    "selected_data.to_csv(\"sentiment_data_with_labels.csv\", index=False) \n",
+    "print(\"Sentiment data with labels saved to sentiment_data_with_labels.csv\")"
+   ]
   }
  ],
  "metadata": {
