--- a/main.ipynb
+++ b/main.ipynb
@@ -245,44 +245,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-"# 5. Visualization",
-"import matplotlib.pyplot as plt",
-"from wordcloud import WordCloud",
-"# Load the translated data with sentiment labels",
-"final_data = pd.read_csv("sentiment_data_with_labels.csv")",
-"# Fill NaN values with empty strings and convert all entries to strings",
-"final_data['translated_text'] =",
-"final_data['translated_text'].fillna('').astype(str)",
-"# Combine all the translated text into a single string",
-"text_combined = " ".join(final_data['translated_text'])",
-"# Create and configure the word cloud",
-"wordcloud = WordCloud(",
-"width=800,",
-"height=400,",
-"background_color='white',",
-"stopwords=set(stop_words_indo_nltk + stop_words_eng_nltk +",
-"additional_stopwords),",
-"max_words=200,",
-"contour_color='steelblue',",
-"contour_width=3",
-").generate(text_combined)",
-"# Display the word cloud using matplotlib",
-"plt.figure(figsize=(10, 5))",
-"plt.imshow(wordcloud, interpolation='bilinear')",
-"plt.axis('off')",
-"plt.title('Word Cloud of Data Tweets')",
-"plt.show()",
-"# Count the sentiment labels",
-"sentiment_counts = final_data["sentiment_label"].value_counts()",
-"# Create a table to show sentiment counts",
-"sentiment_table = pd.DataFrame({"Sentiment": sentiment_counts.index, "Count": ",
-"sentiment_counts.values})",
-"print(sentiment_table.to_string(index=False))",
-"# Create a histogram to visualize sentiment distribution",
-"plt.bar(sentiment_counts.index, sentiment_counts.values)",
-"plt.xlabel("Sentiment")",
-"plt.ylabel("Count")",
-"plt.title("Sentiment Distribution of UKT Increase Comments")",
+"# 5. Visualization \n",
+" \n",
+"import matplotlib.pyplot as plt \n",
+"from wordcloud import WordCloud \n",
+" \n"
+"# Load the translated data with sentiment labels \n",
+"final_data = pd.read_csv("sentiment_data_with_labels.csv") \n",
+" \n"
+"# Fill NaN values with empty strings and convert all entries to strings \n",
+"final_data['translated_text'] = \n",
+"final_data['translated_text'].fillna('').astype(str) \n",
+" \n"
+"# Combine all the translated text into a single string \n",
+"text_combined = " ".join(final_data['translated_text']) \n",
+" \n"
+"# Create and configure the word cloud \n",
+"wordcloud = WordCloud( \n",
+"width=800, \n",
+"height=400, \n",
+"background_color='white', \n",
+"stopwords=set(stop_words_indo_nltk + stop_words_eng_nltk + \n",
+"additional_stopwords), \n",
+"max_words=200, \n",
+"contour_color='steelblue', \n",
+"contour_width=3 \n",
+").generate(text_combined) \n",
+" \n"
+"# Display the word cloud using matplotlib \n",
+"plt.figure(figsize=(10, 5)) \n",
+"plt.imshow(wordcloud, interpolation='bilinear') \n",
+"plt.axis('off') \n",
+"plt.title('Word Cloud of Data Tweets') \n",
+"plt.show() \n",
+" \n"
+"# Count the sentiment labels \n",
+"sentiment_counts = final_data["sentiment_label"].value_counts() \n",
+" \n"
+"# Create a table to show sentiment counts \n",
+"sentiment_table = pd.DataFrame({"Sentiment": sentiment_counts.index, "Count":  \n",
+"sentiment_counts.values}) \n",
+"print(sentiment_table.to_string(index=False)) \n",
+" \n"
+"# Create a histogram to visualize sentiment distribution \n",
+"plt.bar(sentiment_counts.index, sentiment_counts.values) \n",
+"plt.xlabel("Sentiment") \n",
+"plt.ylabel("Count") \n",
+"plt.title("Sentiment Distribution of UKT Increase Comments") \n",
 "plt.show() "
     ]
    } 
