--- a/main.ipynb
+++ b/main.ipynb
@@ -251,7 +251,7 @@
 "from wordcloud import WordCloud \n",
 " \n"
 "# Load the translated data with sentiment labels \n",
-"final_data = pd.read_csv("sentiment_data_with_labels.csv") \n",
+"final_data = pd.read_csv(\"sentiment_data_with_labels.csv\") \n",
 " \n"
 "# Fill NaN values with empty strings and convert all entries to strings \n",
 "final_data['translated_text'] = \n",
@@ -280,18 +280,18 @@
 "plt.show() \n",
 " \n"
 "# Count the sentiment labels \n",
-"sentiment_counts = final_data["sentiment_label"].value_counts() \n",
+"sentiment_counts = final_data[\"sentiment_label\"].value_counts() \n",
 " \n"
 "# Create a table to show sentiment counts \n",
-"sentiment_table = pd.DataFrame({"Sentiment": sentiment_counts.index, "Count":  \n",
+"sentiment_table = pd.DataFrame({\"Sentiment\": sentiment_counts.index, \"Count\":  \n",
 "sentiment_counts.values}) \n",
 "print(sentiment_table.to_string(index=False)) \n",
 " \n"
 "# Create a histogram to visualize sentiment distribution \n",
 "plt.bar(sentiment_counts.index, sentiment_counts.values) \n",
-"plt.xlabel("Sentiment") \n",
-"plt.ylabel("Count") \n",
-"plt.title("Sentiment Distribution of UKT Increase Comments") \n",
+"plt.xlabel(\"Sentiment\") \n",
+"plt.ylabel(\"Count\") \n",
+"plt.title(\"Sentiment Distribution of UKT Increase Comments\") \n",
 "plt.show() "
     ]
    } 
